LoadBoardTask: new AsyncTask to handle loading. TODOs
TODO:
* handle multi-thread correctly (keep threads separate,
  and keep track of omitted replies)
* populate ListView of ImageBoardActivity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, ImageBoardActivity!</string>
     <string name="app_name">4chan</string>
+<string name="404">404 thread not found</string>
 </resources>
